crates/amaru-observability/macros/tests/ui/compile_fail/custom_expr_wrong_type.stderr
error[E0308]: mismatched types
  --> tests/ui/compile_fail/custom_expr_wrong_type.rs:31:17
   |
19 | / define_local_schemas! {
20 | |     test {
21 | |         example {
22 | |             /// Test schema for custom expression type validation
...  |
28 | | }
   | |_- arguments to this function are incorrect
...
31 |       let _span = trace_span!(test::example::STRICT_EXPR_TYPE, fee = "nah");
   |                   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ expected `&u64`, found `&&str`
   |
   = note: expected reference `&u64`
              found reference `&&str`
note: closure parameter defined here
  --> tests/ui/compile_fail/custom_expr_wrong_type.rs:19:1
   |
19 | / define_local_schemas! {
20 | |     test {
21 | |         example {
22 | |             /// Test schema for custom expression type validation
...  |
28 | | }
   | |_^
...
31 |       let _span = trace_span!(test::example::STRICT_EXPR_TYPE, fee = "nah");
   |                   --------------------------------------------------------- in this macro invocation
   = note: this error originates in the macro `trace_span` (in Nightly builds, run with -Z macro-backtrace for more info)
